# yuanrong

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  Makefile  WORKSPACE  build.sh  check_tools.sh  install_tools.sh
.buildkite/: README.html  build_openyuanrong_sdk_wheels.sh  build_python314_builder_image.sh  configure_bazel_remote_cache.sh  docker_job_helpers.sh  package_ci_component_helm.sh  package_core_wheel.py  package_sandbox_manifest.sh  package_sandbox_release.sh  pipeline.dynamic.yml  prime_openyuanrong_sdk_cache.sh  setup_sccache.sh  test_sandbox_k8s.sh  upload_obs_artifacts.sh  upload_test_pypi_wheels.sh  verify_image_manifest.py  verify_python314_sdk_wheel.sh
.skills/diagnose/: SKILL.md
.skills/diagnose/references/: runbook.md
api/cpp/: BUILD.bazel
api/go/: BUILD.bazel
api/go/yr/: cluster_mode_runtime.go  cluster_mode_runtime_test.go
api/java/: BUILD.bazel
api/python/: BUILD.bazel  requirements.txt  setup.py
api/python-rrt/: .gitignore  setup.py
api/python-rrt/openyuanrong_rrt/: __init__.py
api/python/yr/: __init__.py  apis.py  base_runtime.py  cluster_mode_runtime.py  config.py  device.py  exception.py  fnruntime.pyx  object_ref.py  runtime_holder.py
api/rust/: .dockerignore  .gitignore  BUILD.bazel  Cargo.toml  Dockerfile
api/rust/rrt-daemon/: Cargo.toml  build.rs
api/rust/rrt-daemon/proto/posix/: affinity.proto
api/rust/rrt-daemon/proto/rrt/v1/: rrt.proto
api/rust/rrt-daemon/src/: filesystem.rs  health.rs  lib.rs  main.rs  port.rs  process.rs  pyval.rs  startup.rs
api/rust/rrt-daemon/src/runtime/: activity.rs  bash.rs  cmd.rs  codec.rs  dispatch.rs  fs.rs  httpserver.rs  mod.rs  stream.rs  tunnel.rs
api/rust/rrt-daemon/tests/: exec.rs  filesystem.rs  port.rs  pyval.rs  rrtctl.rs  runtime_startup.rs  tunnel_interop.py
api/rust/scripts/: in-compile.sh
bazel/: datasystem_build.bzl  datasystem_deps.bzl  datasystem_rules.bzl  preload_grpc.bzl
bazel/datasystem/: BUILD
bazel/patches/: BUILD
ci/openeuler/: Dockerfile.aarch64  Dockerfile.aarch64.rust  Dockerfile.x86_64  Dockerfile.x86_64.rust
ci/ubuntu/: Dockerfile.python314-overlay  Dockerfile.ubuntu2004  README.md  docker-compose.yml
deploy/data_system/: install.sh
deploy/helm/yuanrong-ci/: values.yaml
deploy/process/: config.sh  config_lite_scheduler_test.sh  config_ssh_test.sh  services.yaml
deploy/sandbox/docker/: Dockerfile  Dockerfile.aio-yr  Dockerfile.runtime  build-images.sh  create-sandbox-host.sh  services.yaml  start-yuanrong.sh  supervisord.conf  verify-port-forward-host.sh  verify-tunnel-host.sh
deploy/sandbox/images/: Dockerfile.base
deploy/sandbox/k8s/: README.md  build-images.sh  deploy.sh
docker/: runtime_euler.Dockerfile
docs/: build.sh  sandbox-usage.md
docs/_static/: search_cjk_dict.js  search_cjk_split.js
docs/_static/css/: custom-dropdown.css  dismissable-banner.css
docs/_static/js/: dismissable-banner.js
docs/features/: direct-routing-gaps.md  direct-routing.md  index.md  sandbox-create-sse-timeout.md  sandbox-implementation.md  sandbox-rest-api.md  yrcli.md
docs/rust-sandbox-runtime/: README.md
docs/source_en/: blog_data.py  conf.py  getting_started.md
docs/source_en/_templates/: custom-index.html
docs/source_en/contributor_guide/: contribution_doc.md
docs/source_en/deploy/: installation.md
docs/source_en/reference/: blog.md
docs/source_en/use_cases/: accelerate_llm_instance_scaling.md  llm_on_multiple_machines.md
docs/source_zh_cn/: blog_data.py  conf.py  getting_started.md
docs/source_zh_cn/_templates/: custom-index.html
docs/source_zh_cn/deploy/: installation.md
docs/source_zh_cn/observability/: index.md  trace_optimization.md
docs/source_zh_cn/reference/: blog.md
docs/source_zh_cn/use_cases/: accelerate_llm_instance_scaling.md  llm_on_multiple_machines.md
example/aio/: README.md
example/keycloak/: README.md
example/others/: env.sh  start.sh
example/traefik/: README.md
example/webterminal/: env4token.sh  start_yr_token.sh
go/pkg/functionscaler/: faasscheduler.go  faasscheduler_test.go
patch/: grpc_1_65_4_external_repo.patch
scripts/: ensure-macos-build-tools.sh  package_python_wheels.sh  package_yuanrong.sh  utils.sh
src/dto/: config.h  invoke_options.h  lru_cache.h
src/libruntime/: err_type.h  invoke_order_manager.cpp  invoke_spec.cpp  invoke_spec.h  libruntime.cpp
src/libruntime/fmclient/: fm_client.cpp
src/utility/metrics/: BUILD.bazel
src/utility/metrics/exporters/file_exporter/: factory_impl.cpp
src/utility/metrics/exporters/http_exporter/: curl_helper.cpp  http_exporter.cpp
src/utility/metrics/exporters/opentelemetry_exporter/: factory_impl.cpp
src/utility/metrics/exporters/ostream/: factory_impl.cpp
src/utility/metrics/exporters/prometheus_pull_exporter/: prometheus_pull_exporter.cpp
src/utility/metrics/exporters/prometheus_push_exporter/: factory_impl.cpp  prometheus_push_exporter.cpp
src/utility/metrics/include/metrics/exporters/prometheus_pull_exporter/: prometheus_pull_exporter.h
src/utility/metrics/include/metrics/plugin/: dynamic_library_handle_unix.h  exporter.h  factory.h
src/utility/metrics/sdk/: batch_export_processor.cpp  immediately_export_processor.cpp  processor_actor.cpp
test/: BUILD.bazel  test_build_gloo_default.sh
test/acceptance/: akernel_baseline.py
test/clibruntime/: clibruntime_test.cpp
test/libruntime/: faas_instance_manager_test.cpp  fs_client_test.cpp  fs_intf_impl_test.cpp  hash_util_test.cpp  invoke_adaptor_test.cpp  invoke_collector_test.cpp  invoke_order_manager_test.cpp  libruntime_manager_test.cpp  libruntime_test.cpp  rt_direct_call_test.cpp  scheduler_manager_test.cpp  task_submitter_test.cpp
test/st/: prepare_and_start_yr.sh  test.sh
test/tools/: test_buildkite_main_packaging.py  test_core_wheel.py  test_datasystem_bazel_adapter.py  test_datasystem_sdk_build_contract.py  test_macos_build_regressions.py  test_makefile_runtime_launcher.py  test_package_yuanrong.py  test_parallel_wheel_packaging.py  test_python_setup_packaging.py  test_sdk_bazel_cache.py
tools/: download_dependency.sh
(+222 files in other folders)
