[package]
name = "rrt-daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "rrt_daemon"
path = "src/lib.rs"

[[bin]]
name = "rrt"
path = "src/main.rs"

[[bin]]
name = "rrt-probe"
path = "src/bin/rrt-probe.rs"

[[bin]]
name = "rrtctl"
path = "src/bin/rrtctl.rs"

[[bin]]
name = "rrt-runtime"
path = "src/bin/rrt-runtime.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "net", "time", "fs"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde-pickle = "1"
rmp-serde = "1"
rmpv = "1"
rmp = "0.8"
portable-pty = "0.8"
libc = "0.2"
tokio-tungstenite = "0.24"
futures-util = "0.3"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
